--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-feather": "^2.0.10",
     "three": "^0.181.2"
   },
   "devDependencies": {
